--- a/public/index.html
+++ b/public/index.html
@@ -54,10 +54,16 @@
                         <a href="#">Contact</a>
                     </li>
                 </ul>
+                        <form>
+  <div style="color:white;">Search:</div>
+  <input type="search" name="search">
+</form>
             </div>
             <!-- /.navbar-collapse -->
+
         </div>
         <!-- /.container -->
+
     </nav>
 
     <!-- Page Content -->
