--- a/public/index.html
+++ b/public/index.html
@@ -72,9 +72,12 @@
         <div class="row">
 
             <div class="col-md-3">
-                <p class="lead">Shop Name</p>
+                <p class="lead">LCBO</p>
                 <div class="list-group">
                     <a href="#" class="list-group-item">Wine</a>
+                    <a href="#" class="list-group-item">Whiskey</a>
+                    <a href="#" class="list-group-item">Vodka</a>
+                    <a href="#" class="list-group-item">Rum</a>
                     <a href="#" class="list-group-item">Spirits</a>
                     <a href="#" class="list-group-item">Beer and Cider</a>
                     <a href="#" class="list-group-item">Coolers</a>
@@ -250,7 +253,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; 2016</p>
                 </div>
             </div>
         </footer>
