--- a/public/index2.html
+++ b/public/index2.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>LCBO Sales</title>
 
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
     <link href="css/style.css" rel="stylesheet">
 
     <script data-main="js/index" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js"></script>
   </head>
   <body ng-controller="AppController as vm">
-  	<h1>Hello</h1>
-  	<h2>{{vm.test}}</h2>
+    <h1>Hello</h1>
+    <h2>{{vm.test}}</h2>
   </body>
 </html>
