--- a/public/index2.html
+++ b/public/index2.html
@@ -12,7 +12,8 @@
     <script data-main="js/index" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js"></script>
   </head>
   <body ng-controller="AppController as vm">
-    <h1>Hello</h1>
-    <h2>{{vm.test}}</h2>
+    <div class="header" layout="row">
+      <h1>LCBO Sales</h1>
+    </div>
   </body>
 </html>
