--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,11 @@
     <div class="header" layout="row">
       <h1>LCBO Sales</h1>
     </div>
+    <div>
+      {{vm.abc()}}
+    </div>
+    <div>
+      
+    </div>
   </body>
 </html>
