--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,19 @@
       <h1>LCBO Sales</h1>
     </div>
     <div class="products">
-      <h2>{{vm.count}}</h2>
-      <ls-table ls-products="vm.products"></ls-table>
-      
+    <div class="page-size">
+      <md-input-container >
+        <label>Page Size</label>
+        <md-select ng-model="vm.pageSize" md-on-close="vm.onPageResize(vm.pageSize)">
+          <md-option ng-repeat="size in [10,20,30,40,50]" value="{{size}}">
+            {{size}}
+          </md-option>
+        </md-select>
+      </md-input-container>
+    </div>
+      <center>
+      <ls-table ls-products="vm.products"></ls-table>  
+      </center>
     </div>
   </body>
 </html>
