Added PageSize functionality

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       </md-input-container>
     </div>
       <center>
-      <ls-table ls-products="vm.products"></ls-table>  
+      <ls-table ls-products="vm.productView"></ls-table>  
       </center>
     </div>
   </body>
