--- a/public/index.html
+++ b/public/index.html
@@ -16,19 +16,31 @@
       <h1>LCBO Sales</h1>
     </div>
     <div class="products">
-    <div class="page-size">
-      <md-input-container >
-        <label>Page Size</label>
-        <md-select ng-model="vm.pageSize" md-on-close="vm.onPageResize()">
-          <md-option ng-repeat="size in [10,20,30,40,50]" value="{{size}}">
-            {{size}}
-          </md-option>
-        </md-select>
-      </md-input-container>
-    </div>
-      <center>
-      <ls-table ls-products="vm.productView"></ls-table>  
-      </center>
+      <div class="page-controls">
+        <div class="page-size">
+          <label>Page Size:</label>
+          <md-input-container>
+            <md-select ng-model="vm.pageSize" md-on-close="vm.onPageResize()">
+              <md-option ng-repeat="size in [10,20,30,40,50]" value="{{size}}">
+                {{size}}
+              </md-option>
+            </md-select>
+          </md-input-container>
+        </div>
+        <div class="page-navigation">
+        </div>
+        <div class="page-buttons">
+          <md-button class="md-icon-button" aria-label="Previous Page" ng-click="vm.previousPage()">
+            <md-icon class="material-icons">chevron_left</md-icon>
+          </md-button>
+          <md-button class="md-icon-button" aria-label="Next Page" ng-click="vm.nextPage()">
+            <md-icon class="material-icons">chevron_right</md-icon>
+          </md-button>
+        </div>
+      </div>
+      <div style="text-align: center;">
+        <ls-table ls-products="vm.products"></ls-table>
+      </div>
     </div>
   </body>
 </html>
