--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div style="text-align: center;">
-        <ls-table ls-products="vm.products"></ls-table>
+        <ls-table ls-products="vm.productView"></ls-table>
       </div>
     </div>
   </body>
