Add paging buttons, update styling

--- a/public/index.html
+++ b/public/index.html
@@ -12,35 +12,43 @@
     <script data-main="js/index" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js"></script>
   </head>
   <body ng-controller="AppController as vm">
-    <div class="header" layout="row">
+    <div class="header md-whiteframe-4dp" layout="row">
       <h1>LCBO Sales</h1>
     </div>
-    <div class="products">
-      <div class="page-controls">
-        <div class="page-size">
-          <label>Page Size:</label>
-          <md-input-container>
-            <md-select ng-model="vm.pageSize" md-on-close="vm.onPageResize()" aria-label="Page Size">
-              <md-option ng-repeat="size in [10,20,30,40,50]" value="{{size}}">
-                {{size}}
-              </md-option>
-            </md-select>
-          </md-input-container>
+    <div class="products" layout="row">
+      <md-content flex="100">
+        <div class="page-controls">
+          <md-toolbar>
+            <div class="md-toolbar-tools">
+              <span flex></span>
+              <div class="page-size">
+                <label>Rows per page:</label>
+                <md-input-container>
+                  <md-select ng-model="vm.pageSize" md-on-close="vm.onPageResize()" aria-label="Page Size">
+                    <md-option ng-repeat="size in vm.pageSizes" value="{{size}}">
+                      {{size}}
+                    </md-option>
+                  </md-select>
+                </md-input-container>
+              </div>
+              <div class="page-navigation">
+                {{vm.getStart()}}-{{vm.getEnd()}} of {{vm.count}}
+              </div>
+              <div class="page-buttons">
+                <md-button class="md-icon-button" aria-label="Previous Page" ng-click="vm.previousPage()" ng-disabled="!vm.hasPrevious()">
+                  <md-icon class="material-icons">chevron_left</md-icon>
+                </md-button>
+                <md-button class="md-icon-button" aria-label="Next Page" ng-click="vm.nextPage()" ng-disabled="!vm.hasNext()">
+                  <md-icon class="material-icons">chevron_right</md-icon>
+                </md-button>
+              </div>
+            </div>
+          </md-toolbar>
         </div>
-        <div class="page-navigation">
+        <div style="text-align: center;">
+          <ls-product-table ls-products="vm.productView"></ls-product-table>
         </div>
-        <div class="page-buttons">
-          <md-button class="md-icon-button" aria-label="Previous Page" ng-click="vm.previousPage()" ng-disabled="!vm.hasPrevious()">
-            <md-icon class="material-icons">chevron_left</md-icon>
-          </md-button>
-          <md-button class="md-icon-button" aria-label="Next Page" ng-click="vm.nextPage()" ng-disabled="!vm.hasNext()">
-            <md-icon class="material-icons">chevron_right</md-icon>
-          </md-button>
-        </div>
-      </div>
-      <div style="text-align: center;">
-        <ls-product-table ls-products="vm.productView"></ls-product-table>
-      </div>
+      </md-content>
     </div>
   </body>
 </html>
