Displaying pageNumber between previous page and next page button

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
                 <md-button class="md-icon-button" aria-label="Previous Page" ng-click="vm.previousPage()" ng-disabled="!vm.hasPrevious()">
                   <md-icon class="material-icons">chevron_left</md-icon>
                 </md-button>
+                {{vm.pageNumber+1}}
                 <md-button class="md-icon-button" aria-label="Next Page" ng-click="vm.nextPage()" ng-disabled="!vm.hasNext()">
                   <md-icon class="material-icons">chevron_right</md-icon>
                 </md-button>
