Update table styling

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       <div class="header md-whiteframe-4dp">
         <div class="header-text">
           <h1>Not for the Taste</h1>
-          <h2>LCBO Sales</h2>
+          <h2>Sales at LCBO</h2>
         </div>
       </div>
       <div class="products" layout="row">
@@ -43,6 +43,11 @@
             <ls-product-table ls-products="vm.productView"></ls-product-table>
           </div>
         </md-content>
+      </div>
+      <div class="footer">
+        <div class="footer-disclaimer">
+          All product names, logos, and brands are property of their respective owners. All company, product and service names used in this website are for identification purposes only. Use of these names, logos, and brands does not imply endorsement.
+        </div>
       </div>
     </div>
   </body>
