Add shadow around body, remove shadow from header

--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,14 @@
       </div>
     </div>
     <div class="content" ng-controller="AppController as vm">
-      <div class="header md-whiteframe-4dp">
+      <div class="header">
         <div class="header-text">
           <h1>Not for the Taste</h1>
           <h2>Sales at LCBO</h2>
         </div>
       </div>
       <div class="products" layout="row">
-        <md-content flex="100">
+        <md-content flex="100" class="md-whiteframe-4dp">
           <div class="page-controls">
             <ls-product-controls
               ls-page-size="vm.pageSize"
