Refine styles, add background

--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
     <div class="content" ng-controller="AppController as vm">
       <div class="header">
         <div class="header-text">
-          <h1>Not for the Taste</h1>
-          <h2>Sales at LCBO</h2>
+          <h1><span>Not</span> <span>for the Taste</span></h1>
+          <h2>Sales at the LCBO</h2>
         </div>
       </div>
       <div class="products" layout="row">
